[gd_scene load_steps=2 format=3 uid="uid://cejk124ga7p6i"]

[ext_resource type="Script" uid="uid://bs76l58hhv7kp" path="res://lobby_ui/lobby.gd" id="1_cnb42"]

[node name="Lobby" type="Node"]
script = ExtResource("1_cnb42")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerList" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="ReadyButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -15.5
offset_right = 26.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "ready"

[node name="StartMatch" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "START"
